--- a/action.yml
+++ b/action.yml
@@ -6,13 +6,8 @@ branding:
   color: red
 
 inputs:
-
-  keystore_b64:
+  keystore:
     description: "The contents of the keystore file, encoded as base64"
-    required: false
-
-  keystore_file:
-    description: "The path to the .jks keystore file"
     required: false
 
   keystore_password:
@@ -27,45 +22,29 @@ inputs:
     description: "Key password"
     required: true
 
-  gradlew_dir:
-    description: "Directory of the gradlew file"
-    required: false
-    default: "."
-
   java_version:
     description: "Java version to build the project with"
     required: false
-    default: '11'
 
 runs:
   using: "composite"
   steps:
-
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v2
+    - name: Setup Java
+      uses: actions/setup-java@v4
+      with:
+        java-version: ${{ inputs.java_version }}
 
     - name: Write keystore file from content
-      if: inputs.keystore_b64
+      if: inputs.keystore
       shell: bash
-      run: echo "${{ inputs.keystore_b64 }}" | base64 -d > "$GITHUB_WORKSPACE/signing-key.jks"
-
-    - name: Copy keystore file to right location
-      if: inputs.keystore_file && !inputs.keystore_b64
-      shell: bash
-      run: cp "${{ inputs.keystore_file }}" "$GITHUB_WORKSPACE/signing-key.jks"
+      run: echo "${{ inputs.keystore }}" | base64 -d > "$GITHUB_WORKSPACE/.jks"
 
     - name: Build APK
       shell: bash
-      working-directory: ${{ inputs.gradlew_dir }}
       run: |
-        export JAVA_HOME="/usr/lib/jvm/temurin-${{ inputs.java_version }}-jdk-amd64"
         chmod +x ./gradlew
-        ./gradlew build --no-daemon
-        ./gradlew assembleRelease --no-daemon \
-          -Pandroid.injected.signing.store.file="$GITHUB_WORKSPACE/signing-key.jks" \
+        ./gradlew assembleRelease \
+          -Pandroid.injected.signing.store.file="$GITHUB_WORKSPACE/.jks" \
           -Pandroid.injected.signing.store.password="${{ inputs.keystore_password }}" \
           -Pandroid.injected.signing.key.alias="${{ inputs.key_alias }}" \
           -Pandroid.injected.signing.key.password="${{ inputs.key_password }}"
-
-    - shell: bash
-      run: rm "$GITHUB_WORKSPACE/signing-key.jks"
